--- a/.env
+++ b/.env
@@ -14,6 +14,13 @@ DB_DATABASE=nhom-f
 DB_USERNAME=root
 DB_PASSWORD=
 
+FACEBOOK_APP_ID=208251227064009
+FACEBOOK_APP_SECRET=2d1c4a61ec283b1e63a484860f290b59
+FACEBOOK_REDIRECT=http://127.0.0.1:8000/login-checkout
+
+GOOGLE_ID=587558366742-n2gl781eut9f848gjmfr5t6ujsghmkkd.apps.googleusercontent.com
+GOOGLE_SECRET=ZkIGxQR7Js7yemREjaC8LGnU
+GOOGLE_URL=http://127.0.0.1:8000/login-checkout
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
